--- a/text-analyzer-starter-files-master/main.css
+++ b/text-analyzer-starter-files-master/main.css
@@ -1,3 +1,5 @@
+
+
 * {
   box-sizing: border-box
 }
@@ -27,3 +29,62 @@ label {
   content: ": ";
 }
 
+h1 {
+
+	text-align: center;
+  font-size: 40px;
+  line-height: 40px;
+  margin: 0;
+  background-color: #7E8AA2;
+  color: white;
+  text-transform: uppercase;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+button {
+	font-size: 30px;
+  font-weight: bold;
+  color: white;
+  text-shadow: 2px 2px 2px black;
+  border: 1px solid color: #263248;
+  width: 100%;
+  background-color: #FF9800;
+  height: 80px;
+}
+
+button:hover {
+	background-color: darkorange;
+}
+
+.col {
+	float: left;
+	width: 50%;
+	padding: 10px;
+}
+
+main {
+	box-shadow: 2px 2px 22px 3px black;
+}
+
+dt {s
+  border: 1px solid #7E8AA2;
+  color: #263248;
+  padding: 5px;
+}
+
+.pContain {
+	color:  #263248;
+	font-size: 20px;
+	text-align: center;
+}
+
+textarea {
+	width: 100%;
+}
+
+input {
+  width: 100%;
+  height: 300px;
+  vertical-align: text-top;
+}
