--- a/text-analyzer-starter-files-master/main.css
+++ b/text-analyzer-starter-files-master/main.css
@@ -1,4 +1,14 @@
-
+h2 {
+  text-align: center;
+  font-size: 10px;
+  line-height: 40px;
+  margin: 0;
+  background-color: #7E8AA2;
+  color: white;
+  font-family: 'Bungee Shade', cursive;
+  padding:10px;
+  opacity: 0.1
+}
 
 * {
   box-sizing: border-box
