--- a/text-analyzer-starter-files-master/main.css
+++ b/text-analyzer-starter-files-master/main.css
@@ -6,41 +6,33 @@ h1 {
   background-color: #7E8AA2;
   color: white;
   font-family: 'Bungee Shade', cursive;
-  padding:10px;
+  padding:20px;
   opacity: 0.1
-}
-
-* {
-  box-sizing: border-box
 }
 
 body {
   font-family: 'Roboto', sans-serif;
 }
 
-.container {
-  padding: 30px;
-}
-
-main {
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-label {
-  display: block;
-}
-
 .hidden {
   display: none;
+}
+
+.row {
+  margin-left:0;
+  margin-right:0;
 }
 
 .text-report dt:after {
   content: ": ";
 }
 
+p {
+  font-size:.8em;
+}
+
 button {
-	font-size: 30px;
+  font-size: 30px;
   font-weight: bold;
   color: white;
   text-shadow: 2px 2px 2px black;
@@ -51,17 +43,11 @@ button {
 }
 
 button:hover {
-	background-color: darkorange;
-}
-
-.col {
-	float: left;
-	width: 50%;
-	padding: 10px;
+  background-color: darkorange;
 }
 
 main {
-	box-shadow: 2px 2px 22px 3px black;
+  box-shadow: 2px 2px 22px 3px black;
 }
 
 dt {s
@@ -71,17 +57,24 @@ dt {s
 }
 
 .pContain {
-	color:  #263248;
-	font-size: 20px;
-	text-align: center;
+  color:  #263248;
+  font-size: 20px;
+  text-align: center;
+  padding:10px;
 }
 
 textarea {
-	width: 100%;
+  width: 100%;
 }
 
 input {
   width: 100%;
   height: 300px;
   vertical-align: text-top;
+}
+
+@media screen and (max-width: 640px) {
+  textarea {
+    height: 100px;
+  }
 }
